syntax = "proto3";

package demo.v1;

option java_package = "com.example.v1.api";
option java_multiple_files = true;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";

service FooService {
  rpc GetFoo (GetFooRequest) returns (GetFooResponse) {
    option (google.api.http) = {
      get: "/foo/{message}"
    };
  }
}

message GetFooRequest {
  string message = 1 [(buf.validate.field).string = {min_len: 1, max_len: 10}];
}

message GetFooResponse {
  string message = 1;
}
